[package]
name = "ublox-core"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Ublox M8 driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/ublox-core"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "UBLOX",
    "GPS",
    "M8"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = {version = "0.1.2" }
genio = {version="0.2.1", default-features = false}
cortex-m-semihosting = "0.3.3"
shufflebuf = { git="https://github.com/tstellanova/shufflebuf-rs" }

[[example]]
name = "serial"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32h7 = { version = "0.10.0", features = ["stm32h743"] }
#stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }
#stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", features = ["stm32h743", "rt"] }
stm32h7xx-hal = { path = "../stm32h7xx-hal",  features = ["stm32h743", "rt"] }
