[package]
name = "ublox-core"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Ublox M8 driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/ublox-core"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "UBLOX",
    "GPS",
    "GNSS",
    "M8"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
nb = "1.0.0"
rbf = { git = "https://github.com/barafael/rbf-rs" }

[[example]]
name = "serial_dump"

[[example]]
name = "monitor"

[dev-dependencies]
arrayvec = { version = "0.7.1", default-features = false }
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
stm32h7 = { version = "0.13.0", features = ["stm32h743"] }
#stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", features = ["stm32h743", "rt"] }
